[2단계 - 블랙잭 베팅] 깃짱(조은기) 미션 제출합니다. (#505)
* fix(test): 실패하는 테스트 코드 수정

* refactor(Score): 객체의 책임 분리

* docs: 2단계 리팩터링 사항

* refactor(Score): 클래스의 책임 분산

* style(InputView): 상수 이름 변경

* feat(WinningResult): 딜러가 Bust이면 플레이어는 무조건 승리

* docs: 기능 목록 추가

* docs: 다이어그램 관리

* docs: 다이어그램 수정

* refactor(Cards): 불변 객체로 변경

* feat(Hit): draw 후 Bust 여부 판단

* refactor(Fixtures): 중복 코드 제거

* feat(Hit): Stand 선택 가능

* feat(Ready): 첫 draw가 BlackJack 인지 판단

* feat(BlackJack, Bust, Stand): 수익 가중치 반환

* feat(Money): 베팅 금액 생성

* feat(Status): implement 관계 설정

* chore(status): 패키지 변경

* refactor(status): 상속, 인터페이스 계층 설계

* refactor(Participant): 메서드 파라미터 타입 변경

* feat(InputView): 베팅 금액 입력

* feat(Bets): 배팅 금액 추가

* feat(status): Cards 반환 기능 추가

* feat(Status): 점수 계산 로직 클래스 이동

* feat(Money): 가중치 곱하기 기능 추가

* feat(Bets): 금액 출력

* fix(Bust): 가중치 변경

* test(Bets): 테스트 코드 추가

* test(Bets): 테스트 코드 작성

* test(Bets): 테스트 코드 추가

* feat(Bets): 딜러의 수익 계산

* feat(BlackJackGame): 최종 수익 출력

* refactor(Cards): 예외를 빠르게 던지기

* refactor(Score): 완전 수동적인 객체로 변경

* refactor(InputView): 상수 이름 변경

* test(status): 상위 타입으로 변경

* chore(all): 패키지 이동

* feat(Bets): Money 초기 입력 값에 대한 검증

* fix(WinningResult): 플레이어가 Bust하면 무조건 패배

* refactor(Cards): 카드 점수 비교 로직 클래스 이동

* docs: 2단계 리팩터링 목록 업데이트

* refactor(Cards): 세부 구현 변경

* style(Dealer): 상수 이름 변경

* style(all): 개행, 정렬, import 최적화

* refactor(Participant): 불필요한 생성자 삭제

* refactor(WinningResult): 반환 타입 변경

* test(PlayerCommand): assertAll 적용

* mission: Generic 미션

* style(Cards): 매개변수 이름 변경

* refactor(Bets): initial Bet 검증 클래스 변경

* fix(Player): 플레이어가 Bust하면 패배하도록 변경

* refactor(status): 예외 종류 변경